--- a/src/data/conferences.yml
+++ b/src/data/conferences.yml
@@ -210,7 +210,7 @@
   link: https://cvpr.thecvf.com/Conferences/2025
   deadline: '2024-11-15 06:59:59'
   abstract_deadline: '2024-11-08 06:59:59'
-  timezone: GMT
+  timezone: UTC
   place: Nashville, Tennessee, USA
   venue: Music City Center, Nashville, USA
   date: June 10-17, 2025
@@ -219,7 +219,12 @@
   hindex: 389
   tags:
   - computer-vision
-  note: Mandatory paper registration deadline on November 07, 2023. More info <a href='https://cvpr.thecvf.com/Conferences/2025'>here</a>.
+  account_creation_deadline: '2024-11-01 06:59:59'
+  supplementary_deadline: '2024-11-22 06:59:59'
+  review_release_date: '2025-01-23 07:59:59'
+  rebuttal_period_end: '2025-01-31 07:59:59'
+  final_decision_date: '2025-02-26 07:59:59'
+  note: 'OpenReview account creation deadline on Nov 1st, paper registration deadline on Nov 8th, supplementary materials deadline on Nov 22nd. Reviews released on Jan 23rd, rebuttal period ends Jan 31st, and final decisions on Feb 26th.'
 
 - title: ESANN
   year: 2025
@@ -403,13 +408,21 @@
   id: iccv25
   full_name: IEEE International Conference on Computer Vision
   link: https://iccv.thecvf.com/Conferences/2025
-  deadline: '2025-03-08 09:59:59'
-  timezone: UTC+0
+  deadline: '2025-03-07 23:59:59'
+  abstract_deadline: '2025-03-03 23:59:59'
+  timezone: HST
   place: Honolulu, Hawaii
   date: October 19-25, 2025
+  start: 2025-10-19
+  end: 2025-10-25
   tags:
   - machine-learning
   - computer-vision
+  review_release_date: '2025-05-09'
+  rebuttal_period_start: '2025-05-10'
+  rebuttal_period_end: '2025-05-16'
+  final_decision_date: '2025-06-20'
+  note: 'Paper registration deadline on March 3rd, 2025. Reviews released on May 9th, rebuttal period May 10-16, and final decisions on June 20th.'
 
 - title: ICANN
   year: 2025
