--- a/nginx.conf
+++ b/nginx.conf
@@ -4,6 +4,13 @@ server {
     root /usr/share/nginx/html;
     index index.html;
     
+    # Specify client body temp path
+    client_body_temp_path /tmp/nginx/client_temp;
+    proxy_temp_path       /tmp/nginx/proxy_temp;
+    fastcgi_temp_path    /tmp/nginx/fastcgi_temp;
+    uwsgi_temp_path      /tmp/nginx/uwsgi_temp;
+    scgi_temp_path       /tmp/nginx/scgi_temp;
+    
     # Enable gzip compression
     gzip on;
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
