--- a/src/data/conferences.yml
+++ b/src/data/conferences.yml
@@ -542,8 +542,14 @@
   full_name: ACM SIGKDD Conference on Knowledge Discovery and Data Mining
   deadline: '2025-02-10 23:59:59'
   abstract_deadline: '2025-02-03 23:59:59'
+  start: 2025-08-03
+  end: 2025-08-07
   timezone: AoE
   tags:
   - data-mining
   - machine-learning
   note: 'Abstract deadline on February 3rd, 2025. Paper submission deadline February 10th, 2025 AoE.'
+  abstract_deadline: '2025-02-03 23:59:59'
+  rebuttal_period_start: '2025-04-04'
+  rebuttal_period_end: '2025-04-18'
+  final_decision_date: '2025-05-16'
